--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "start": "vite",
         "build": "vite build"
     },
     "devDependencies": {
+        "@alpinejs/focus": "^3.13.3",
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.10",
+        "alpinejs": "^3.13.3",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
-        "vite": "^4.0.0"
+        "postcss": "^8.4.33",
+        "postcss-nesting": "^12.0.2",
+        "tailwindcss": "^3.4.1",
+        "vite": "^4.5.1"
     }
 }
