--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+L5_SWAGGER_GENERATE_ALWAYS=true
+SWAGGER_VERSION=2.0
+L5_SWAGGER_GENERATE_ALWAYS=false
