--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ meumakefile
 /public/hot
 /public/storage
 /storage/*.key
+/storage/openapi*
 /vendor
 .env
 .env.backup
@@ -19,3 +20,7 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+.phpstorm.meta.php
+_ide_helper.php
+_ide_helper_models.php
+resources/views/vendor/
