--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "darkaonline/l5-swagger": "^8.5",
         "filament/filament": "^3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/vapor-core": "^2.32",
-        "livewire/livewire": "^3.1"
+        "livewire/livewire": "^3.1",
+        "zircote/swagger-php": "^4.8"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.18",
@@ -42,6 +45,11 @@
         }
     },
     "scripts": {
+        "ide": [
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:models --write-mixin",
+            "@php artisan ide-helper:meta"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
