--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.8",
         "laravel/vapor-core": "^2.32",
         "livewire/livewire": "^3.1",
+        "spatie/laravel-query-builder": "^5.7",
         "zircote/swagger-php": "^4.8"
     },
     "require-dev": {
