--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "start": "vite",
-        "build": "vite build"
+        "dev:backoffice": "vite",
+        "dev:webapp": "vite --config vite-webapp.config.js",
+        "build:backoffice": "vite build",
+        "build:webapp": "vite build --config vite-webapp.config.js"
     },
     "devDependencies": {
         "@alpinejs/focus": "^3.13.3",
@@ -15,6 +17,7 @@
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.33",
         "postcss-nesting": "^12.0.2",
+        "sass": "^1.70.0",
         "tailwindcss": "^3.4.1",
         "vite": "^4.5.1"
     }
