--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/vapor-core": "^2.32",
+        "league/flysystem-aws-s3-v3": "^3.23",
         "livewire/livewire": "^3.1",
         "spatie/laravel-query-builder": "^5.7",
         "zircote/swagger-php": "^4.8"
