--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-FILAMENT_FILESYSTEM_DISK=public
+FILAMENT_FILESYSTEM_DISK=s3
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -27,8 +27,8 @@ AWS_ACCESS_KEY_ID=sail
 AWS_SECRET_ACCESS_KEY=password
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=local
-AWS_ENDPOINT=http://localhost:9000
-AWS_URL=http://localhost:9000/local
+AWS_ENDPOINT=http://minio:9000
+AWS_URL=http://minio:9000/local
 AWS_USE_PATH_STYLE_ENDPOINT=true
 
 MEMCACHED_HOST=127.0.0.1
